<resources>
    <string name="app_name">Contacts2</string>

    <string name="action_settings">Settings</string>
    <string name="buttonLoadContacts">Load Contacts</string>
    <string name="buttonLoadCallLog">Load call Logs</string>
    <string name="ShowDB">Database</string>

    <string name="DbUpdateStatus">DB status</string>
    <string name="LOAD_SMS_LOGS">Load SMS Logs</string>

    <string name="SaveStats">Save stats to DB</string>
    <string name="NameOfParticularID">Contact name: </string>
    <string name="title_activity_show_details">ShowDetails</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main_activity2">Stats DB</string>
    <string name="title_activity_mail_sender">Mail Sender</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_service">ServiceActivity</string>


    <string name="OpenGPSservice">Open GPS service</string>
    <string name="Version2">Version2</string>



    <string name="Subject">Subject</string>
    <string name="EmailAddress">Email Address!</string>
    <string name="TypeMessageHere">Type Message Here !</string>
    <string name="Send">Send</string>


    <string name="StartService">Start Service</string>
    <string name="StopService">Stop Service</string>
    <string name="GETMYPOSITION">GET MY POSITION</string>


    <string name="OpenApp">Open App</string>
    <string name="LOADSTATS">LOAD STATS</string>


</resources>

