<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="sk.stavona.contacts2.MainActivity"
                android:id="@+id/horizontalMainActivity"
                android:background="#ff2aa706">

    <ListView
        android:id="@+id/listOfContacts"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:background="#ff62d432"
        android:layout_below="@+id/buttonLoadContacts"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/textView"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonLoadContacts"
        android:text="@string/buttonLoadContacts"
        android:background="#ffacff37"
        android:backgroundTint="#ffacffb2"
        android:backgroundTintMode="multiply"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ShowDB"
        android:id="@+id/buttonStatDB"
        android:background="#ffacff37"
        android:layout_alignTop="@+id/buttonOpenGpsService"
        android:layout_toRightOf="@+id/buttonOpenGpsService"
        android:layout_toEndOf="@+id/buttonOpenGpsService"
        android:backgroundTint="#ffacffb2"
        android:backgroundTintMode="multiply"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/OpenGPSservice"
        android:id="@+id/buttonOpenGpsService"
        android:background="#ffacff37"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:backgroundTint="#ffacffb2"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Version2"
        android:id="@+id/textView"
        android:layout_above="@+id/buttonOpenGpsService"
        android:layout_alignLeft="@+id/buttonOpenGpsService"
        android:layout_alignStart="@+id/buttonOpenGpsService"/>

</RelativeLayout>
